
Tue Sep 05 22:58:52 1995

        * scc.h : Add another KRB5_SCC_FVNO but don't up the default.
        * scc_gennew.c, scc_maybe.c : New version saves a length after
                version for whatever we want to put into the ccache before
                the first credential (like a time skew)
        * scc_read.c, scc_write.c : Remove krb5_enctype references, and
                replace with krb5_keytype where appropriate

Tue Aug 29 13:36:39 EDT 1995	Paul Park	(pjpark@mit.edu)
	* scc_reslv.c - Set magic number in successfully resolved ccache.

Wed Aug 16 02:45:19 1995  Chris Provenzano <proven@mit.edu>

        * scc_maybe.c: Pass fds to krb5_lock_file() and krb5_unlock_file()

Tue Jul 11 19:22:17 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* scc-proto.h: Add prototype for krb5_scc_read.

Wed Jun 14 23:55:24 1995  Theodore Y. Ts'o  (tytso@dcl)

	* scc_errs.c (krb5_scc_interpret): Add #ifdef around switch
		statement for ETXTBUSY.


Sat Jun 10 00:04:02 1995  Theodore Y. Ts'o  <tytso@dcl>

	* scc_init.c (krb5_scc_initialize): Make sure the status return
	        from krb5_scc_store_principal is reflected in the return
		status of krb5_scc_initialize().

Fri Jun  9 19:30:35 1995    <tytso@rsx-11.mit.edu>

	* configure.in: Remove standardized set of autoconf macros, which
		are now handled by CONFIG_RULES.

	* scc_maybe.c: Fix -Wall nit

Fri May 26 20:19:49 1995  Theodore Y. Ts'o  (tytso@dcl)

	* configure.in, Makefile.in: Add support for building shared libraries.

Thu Apr 13 16:32:12 1995 Keith Vetter (keithv@fusion.com)

	* scc_genn.c: __STDC__ conditional also checks the _WINDOWS define.

Sat Mar 25 14:42:37 1995  Tom Yu  (tlyu@dragons-lair)

	* scc_maybe.c (krb5_scc_open_file): fixed typo (extra & in
	reference to fvno_bytes)

	* scc_gennew.c: Ultrix cc (and K&R compilers) doesn't deal with
	automatic aggregate initialization, so fixed scc_fvno usage.

Fri Mar 17 19:24:05 1995  John Gilmore  (gnu at toad.com)
