@@ -148,10 +148,10 @@ krb5_scc_store_keyblock(context, id, keyblock)
      krb5_scc_data *data = (krb5_scc_data *)id->data;
      krb5_error_code ret;
 
-     ret = krb5_scc_store_ui_2(context, id, keyblock->keytype);
+     ret = krb5_scc_store_ui_2(context, id, keyblock->enctype);
      CHECK(ret);
      if (data->version == KRB5_SCC_FVNO_3) {
-	 ret = krb5_scc_store_ui_2(context, id, keyblock->keytype);
+	 ret = krb5_scc_store_ui_2(context, id, keyblock->enctype);
 	 CHECK(ret);
      }
      ret = krb5_scc_store_int32(context, id, keyblock->length);
